# motto-skill-registry

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  STANDUP.md  install.ps1  install.sh  plugins.json  pyproject.toml  standup.sh  sync.ps1  sync.sh
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
_factory-configs/: plugins.json
_factory-configs/mcp/: shared.json
docs/: README.md
hooks/: sync-knowledge.ps1  sync-knowledge.sh
knowledge/: autonomy-policy.json  capability-gaps.json  drift-probes.json  facts.json
mcp/: shared.json
policy/: hooks.json  mission-templates.json  skill-broker.policy.json
skills/api-credential-acquisition/: SKILL-factory-configs.md  SKILL.md
skills/bottleneck-posterity/: SKILL.md
skills/capability-gap-detector/: SKILL.md
skills/credential-escrow/: SKILL.md
skills/decision-log/: SKILL.md
skills/environment-drift-monitor/: SKILL.md
skills/error-pattern-detector/: SKILL.md
skills/frontier-search/: SKILL.md
skills/github-code-awareness/: SKILL-factory-configs.md  SKILL.md
skills/hermes-generalist-driver/: SKILL.md
skills/hermes-mcp-wiring/: SKILL.md
skills/knowledge-distiller/: SKILL.md
skills/mcp-connection-triage/: SKILL.md
skills/mcp-hub/: SKILL.md
skills/mem0-session-persistence/: SKILL.md
skills/mission-dispatcher/: SKILL.md
skills/readiness-gate/: SKILL.md
skills/recycler/: SKILL.md
tests/: test_skill_validation.py
tools/: auth_runner.py  auth_runner_recipes.sample.json  github_awareness_index.json  github_awareness_refresh.py
watchers/: mission-watcher.ps1
(+37 files in other folders)
